Gotta have roundy corners in Firefox.

--- a/public/readme.html
+++ b/public/readme.html
@@ -19,7 +19,7 @@
         width: 500px;
         background: rgb(50,50,50);
         -webkit-border-radius: 10px;
-        -mox-border-radius: 10px;
+        -moz-border-radius: 10px;
         border-radius: 10px;
       }
       
