Fixed noob HTML mistake

--- a/public/readme.html
+++ b/public/readme.html
@@ -85,7 +85,7 @@
       
       
       <blockquote>
-        <p>By <a href="beautifulpixel.com">Alex Wayne</a></p>
+        <p>By <a href="http://beautifulpixel.com">Alex Wayne</a></p>
       </blockquote>
     </div>
   </body>
