Fix very important readme typo

--- a/public/readme.html
+++ b/public/readme.html
@@ -92,7 +92,7 @@
       <ul>
         <li><code>iuser</code>: username</li>
         <li><code>ipass</code>: password</li>
-        <li><code>parent_id</code>: The ID of the post that is being replied to.  Leave blank it its a new root post.</li>
+        <li><code>parent</code>: The ID of the post that is being replied to.  Leave blank it its a new root post.</li>
         <li><code>group</code>: The story ID this post is getting attached to.</li>
         <li><code>body</code>: The text content of the comment.</li>
       </ul>
