Added message posting hook.

--- a/public/readme.html
+++ b/public/readme.html
@@ -123,7 +123,7 @@
       <h2>GET /messages.xml</h2>
       <p>Returns a list of all messages in your inbox.</p>
       
-      <h2>POST /messages.xml (NOT FUNCTIONAL YET)</h2>
+      <h2>POST /messages.xml</h2>
       <p>Send a message.  It accepts the following POST variables, all required.</p>
       
       <ul>
