--- a/public/about.html
+++ b/public/about.html
@@ -151,6 +151,23 @@
       <h2>News</h2>
       
       <p>
+        <strong>Apr 13, 2010</strong><br/>
+        2.6 has been submitted.  It sports a massive UI overhaul for iPad,
+        mainly thanks to <span class="jt_yellow">yakz</span>.
+
+        <ul>
+          <li>Toggle left tray on and off in any orientation but tapping the left margin of the screen.</li>
+          <li>Traverse by time posted or thread order via the "chrono" toggle"</li>
+          <li>Eliminate toolbars on the bottom of the screen</li>
+          <li>Tag menu appears in a popover</li>
+          <li>Modal overlay windows for certain actions (settings, browser, about)</li>
+          <li>Restyled and sexier navbars/toolbars.</li>
+          <li>640x480 youtube widgets</li>
+          <li>Bug fixes and other minor tweaks here and there for maximum awesome.</li>
+        </ul>
+      </p>
+      
+      <p>
         <strong>Apr 10, 2010</strong><br/>
         Hey look, I forgot I put a news section here!  So uh, yeah.  iPad
         support is awesome!  And the next release will improve it.  I made
