--- a/public/about.html
+++ b/public/about.html
@@ -152,6 +152,16 @@
       
       <p>
         <strong>Apr 13, 2010</strong><br/>
+        It's taking forever to get this release out.  Mostly because I am lazy.
+        There has been a few rejections, for legitimate crashes and issues.
+        Although I think the community would have found them and I could have
+        responded much faster than Apple as my testing body.  But I think I
+        just submitted the build that doesn't suck now.  So 2.6 is finally
+        inbound.  Cross your fingers.
+      </p>
+      
+      <p>
+        <strong>Apr 13, 2010</strong><br/>
         2.6 has been submitted.  It sports a massive UI overhaul for iPad,
         mainly thanks to <span class="jt_yellow">yakz</span>.
 
